--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,10 @@ html {
     tab-size: 4;
     font-family: Inter Variable, Inter, ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica Neue, Arial, Noto Sans, sans-serif, apple color emoji, segoe ui emoji, Segoe UI Symbol, noto color emoji;
     font-feature-settings: normal;
-    font-variation-settings: normal
+    font-variation-settings: normal;
+    max-width: 100%;
+    overflow-x: hidden;
+    width: 100%;
 }
 
 body {
@@ -83,6 +86,8 @@ small {
     font-size: 80%
 }
 
+
+
 sub,
 sup {
     font-size: 75%;
@@ -90,6 +95,7 @@ sup {
     position: relative;
     vertical-align: baseline
 }
+
 
 sub {
     bottom: -.25em
